src/assets/css/style.css
/* ... */
.box-style:hover::before {
  width: 200%;
  height: 200%;
}

.box-style.alt-box {
  max-width: 100%;
  width: 100%;
  max-height: 100%;
  height: 100%;
}

.box-style.alt-box::before {
  background: rgba(var(--p1), 0.2);
}

.box-style.alt-box:hover::before {
  width: 300%;
  height: 500%;
}

.btn-rounded-cus {
  background: rgba(var(--p1), 0.3);
}

.btn-rounded-cus::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  background: rgb(var(--p1));
  border-radius: inherit;
  width: 0;
  height: 100%;
  z-index: -1;
  transition: width 0.5s ease-in-out;
}

@media (max-width: 991px) {
  .btn-rounded-cus::before {
    display: none;
  }
}

.btn-rounded-cus:hover::before {
  width: 100%;
}

.btn-half-border::before {
  content: "";
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  border-radius: inherit;
  width: calc(100% + 12px);
  height: calc(100% + 12px);
  z-index: -1;
  transition: border 0.3s ease-in-out;
  border: 2px solid transparent;
  border-color: transparent rgb(var(--p1));
}

.btn-half-border:hover::before {
  border-color: rgb(var(--p1));
}

.btn2 {
  width: 48px;
  min-width: 48px;
  max-width: 48px;
  height: 48px;
  border-radius: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
  background: rgb(var(--s1));
  transition: all 0.5s ease;
}

.swiper-btn {
  width: 56px;
  min-width: 56px;
  max-width: 56px;
  height: 56px;
  border-radius: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
  position: relative;
  z-index: 1;
}

.swiper-btn::after {
  position: absolute;
  content: "";
  display: inline-block;
  width: 100%;
  height: 100%;
  border-radius: inherit;
  border: 1px dashed rgb(var(--p1));
  z-index: -1;
}

.swiper-btn.box-style {
  border: unset;
}

@media (max-width: 767px) {
  .swiper-btn {
    width: 40px;
    min-width: 40px;
    max-width: 40px;
    height: 40px;
    border-radius: 50%;
    display: flex;
    align-items: center;
    justify-content: center;
  }
}

.claim-btn {
  padding: 12px 24px;
  background: rgb(var(--n3));
  border-radius: 50px;
  transition: all 0.5s ease;
}

.claim-btn:hover {
  background: rgb(var(--p1));
}

.bttn {
  border: 0;
  outline: 0;
  background: transparent;
}

.send-msg {
  background: rgb(var(--p2));
  border-radius: 50px;
}

.ntf-btn {
  width: 60px;
  min-width: 60px;
  max-width: 60px;
  height: 60px;
  border-radius: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
}

@media (max-width: 991px) {
  .ntf-btn {
    width: 42px;
    min-width: 42px;
    max-width: 42px;
    height: 42px;
    border-radius: 50%;
    display: flex;
    align-items: center;
    justify-content: center;
  }
}

@media (max-width: 575px) {
  .ntf-btn {
    width: 30px;
    min-width: 30px;
    max-width: 30px;
    height: 30px;
    border-radius: 50%;
    display: flex;
    align-items: center;
    justify-content: center;
  }
}

.header-section {
  position: fixed;
  top: 0;
  left: 50%;
  transform: translateX(-50%);
  z-index: 100;
  transition: all 0.3s ease-in-out;
  max-height: 100px;
}

@media (max-width: 991px) {
  .header-section .navbar-toggle-item {
    display: none;
  }
}

@media (min-width: 992px) {
  .header-section .navbar-toggle-item {
    display: initial !important;
  }
}

.header-section .top-bar.alt {
  max-width: 260px;
  width: 100%;
}

.header-section .navbar-brand .logo1 {
  max-width: 48px;
}

.header-section .navbar-brand .logo2 {
  max-width: 180px;
}

@media (max-width: 991px) {
  .header-section .navbar-brand .logo1 {
    max-width: 36px;
  }

  .header-section .navbar-brand .logo2 {
    max-width: 140px;
  }
}

@media (max-width: 575px) {
  .header-section .navbar-brand .logo1 {
    max-width: 24px;
  }

  .header-section .navbar-brand .logo2 {
    display: none;
  }
}

.header-section .navbar-toggle-btn,
.header-section .sidebar-toggle-btn {
  width: 36px;
  height: 28px;
  position: relative;
  right: 0;
  transition: 0.3s ease-in-out;
  top: 0px;
  background: transparent;
  border: none;
}

.header-section .navbar-toggle-btn span,
.header-section .sidebar-toggle-btn span {
  display: block;
  position: absolute;
  height: 3px;
  width: 100%;
  background: white;
  border-radius: 9px;
  opacity: 1;
  left: 0;
  transform: rotate(0deg);
  transition: 0.3s ease-in-out;
}

.header-section .navbar-toggle-btn span:nth-child(1),
.header-section .sidebar-toggle-btn span:nth-child(1) {
  top: 0px;
}

.header-section .navbar-toggle-btn span:nth-child(2),
.header-section .navbar-toggle-btn span:nth-child(3),
.header-section .sidebar-toggle-btn span:nth-child(2),
.header-section .sidebar-toggle-btn span:nth-child(3) {
  top: 12px;
}

.header-section .navbar-toggle-btn span:nth-child(4),
.header-section .sidebar-toggle-btn span:nth-child(4) {
  top: 24px;
}

.header-section .navbar-toggle-btn.open span:nth-child(1),
.header-section .sidebar-toggle-btn.open span:nth-child(1) {
  top: 18px;
  width: 0%;
  left: 50%;
}

.header-section .navbar-toggle-btn.open span:nth-child(2),
.header-section .sidebar-toggle-btn.open span:nth-child(2) {
  transform: rotate(45deg);
}

.header-section .navbar-toggle-btn.open span:nth-child(3),
.header-section .sidebar-toggle-btn.open span:nth-child(3) {
  transform: rotate(-45deg);
}

.header-section .navbar-toggle-btn.open span:nth-child(4),
.header-section .sidebar-toggle-btn.open span:nth-child(4) {
  top: 18px;
  width: 0%;
  left: 50%;
}
/* ... */

